[gd_scene load_steps=3 format=3 uid="uid://kt0wk4ojfq5d"]

[ext_resource type="Script" path="res://tests/test_sync_service.gd" id="1_88xky"]
[ext_resource type="Script" path="res://scripts/services/sync.gd" id="2_pykb2"]

[node name="SyncServiceTest" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88xky")

[node name="SyncService" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_pykb2")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 600.0
offset_bottom = 510.0
size_flags_vertical = 3

[node name="Logger" type="CodeEdit" parent="ScrollContainer"]
unique_name_in_owner = true
offset_right = 600.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="SyncServiceTest" type="ScrollContainer" parent="."]
offset_top = 514.0
offset_right = 600.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SyncServiceTest"]
offset_right = 600.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="ScrollContainer" parent="SyncServiceTest/HBoxContainer"]
offset_right = 298.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SyncServiceTest/HBoxContainer/VBoxContainer"]
offset_right = 298.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GetUserIdButton" type="Button" parent="SyncServiceTest/HBoxContainer/VBoxContainer/VBoxContainer"]
offset_right = 298.0
offset_bottom = 43.0
text = "Get User Id"

[node name="GetUserTokenButton" type="Button" parent="SyncServiceTest/HBoxContainer/VBoxContainer/VBoxContainer"]
offset_top = 47.0
offset_right = 298.0
offset_bottom = 90.0
text = "Get User Token"

[node name="ScrollContainer" type="ScrollContainer" parent="SyncServiceTest/HBoxContainer"]
offset_left = 302.0
offset_right = 600.0
offset_bottom = 510.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SyncServiceTest/HBoxContainer/ScrollContainer"]
offset_right = 298.0
offset_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PrepareSyncButton" type="Button" parent="SyncServiceTest/HBoxContainer/ScrollContainer/VBoxContainer"]
offset_right = 298.0
offset_bottom = 43.0
text = "Prepare Sync"

[node name="SyncButton" type="Button" parent="SyncServiceTest/HBoxContainer/ScrollContainer/VBoxContainer"]
offset_top = 47.0
offset_right = 298.0
offset_bottom = 90.0
text = "Sync"

[connection signal="pressed" from="SyncServiceTest/HBoxContainer/VBoxContainer/VBoxContainer/GetUserIdButton" to="." method="_on_get_user_id_button_pressed"]
[connection signal="pressed" from="SyncServiceTest/HBoxContainer/VBoxContainer/VBoxContainer/GetUserTokenButton" to="." method="_on_get_user_token_button_pressed"]
[connection signal="pressed" from="SyncServiceTest/HBoxContainer/ScrollContainer/VBoxContainer/PrepareSyncButton" to="." method="_on_prepare_sync_button_pressed"]
[connection signal="pressed" from="SyncServiceTest/HBoxContainer/ScrollContainer/VBoxContainer/SyncButton" to="." method="_on_sync_button_pressed"]
